# nix-config

./: .env  .envrc  .git-blame-ignore-revs  .gitattributes  .gitignore  .justfile  .pre-commit-config.yaml  .sops.yaml  AGENTS.md  LICENSE  Makefile  README.md  bootstrap-vm.sh  bootstrap0-vm-aarch64-prl.sh  bootstrap0-vm-aarch64.sh  bootstrap0-vm-linode.sh  color-blender.html  devenv.nix  devenv.yaml  flake.nix  formatter.nix  justfile  justfile.incl  treefmt.nix
.omp/: mcp.json
data/: avatar.frag
flake/: cmd-fmt.nix  config-manager-options.nix  config-manager.nix  devshells.nix  mk-systems-options.nix  mk-systems.nix
globals/: default.nix  home-manager-settings-inject.nix  nix-client-config.nix  settings.nix  unfree.nix
hive/: default.nix  flake.nix
hosts/: common.nix  darwin-common.nix  darwin-corp.nix  darwin.nix  default.nix  hive-deploy.nix  vm-aarch64-prl.nix  vm-aarch64.nix  vm-common.nix  vm-linode.nix  vm-nat-common.nix
hosts.parts/: hosts.nix
lib/: caddy.nix  codepoints.toml  default.nix  fonts.nix  gatus.nix  homebrew.nix  homelab.toml  inventory.toml  mk-darwin-system.nix  mk-home-only.nix  mkhome.nix  (+6 more)
lib.parts/: _builders.nix  _fonts.nix  _gatus.nix  _openssh.nix  _zfs.nix  codepoints.toml  default.nix  homelab.toml
modules/home/arcshell/: .skip-subtree  CMakeLists.txt  SKILL.md
modules/home/arcshell/components/: AnimatedColor.qml  ArcChip.qml  ArcText.qml  BorderLine.qml  BufferedWheelEventMouseArea.qml  MaterialIcon.qml  QuickToggle.qml  WaylandShortcut.qml
modules/home/arcshell/components/launcher/: Wrapper.qml
modules/home/arcshell/config/: AudioConfig.qml  BrightnessConfig.qml  Config.qml  FileSystem.qml  ServicesConfig.qml  ThemeConfig.qml
modules/home/arcshell/config/tokens/: SystemTokens.qml  Tokens.qml
modules/home/arcshell/config/tokens/component/: Notification.qml  SliderLabel.qml
modules/home/arcshell/config/tokens/feature/: BarDecorator.qml  Clock.qml  Desktop.qml  DesktopLicense.qml  PowerManagement.qml  PowerProfile.qml  Vpn.qml
modules/home/arcshell/config/tokens/system/: Measurements.qml  Typography.qml
modules/home/arcshell/config/tokens/types/: BorderValues.qml  SurfaceTokens.qml
modules/home/arcshell/hud/: BarBottom.qml  BarTop.qml  DesktopLicense.qml  Drawers.qml  Hud.qml  HudExclusiveZones.qml  Interactions.qml
modules/home/arcshell/hud/controlcenter/: Wrapper.qml
modules/home/arcshell/hud/controlcenter/widgets/: QuickToggles.qml
modules/home/arcshell/hud/dynamicisland/: Drawer.qml  Wrapper.qml
modules/home/arcshell/hud/dynamicisland/widgets/: BrightnessSlider.qml  VolumeSlider.qml
modules/home/arcshell/hud/notificationcenter/: Content.qml
modules/home/arcshell/hud/widgets/: BarDecorator.qml  PowerManagementIcon.qml  PowerProfileIcon.qml  Workspace.qml  Workspaces.qml
modules/home/arcshell/services/: Audio.qml  Brightness.qml  Network.qml  VpnCheck.qml
modules/nixos/apdbctl/: CMakeLists.txt  README.md
(+1312 files in other folders)
